--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=User-Service
+server.port=8081
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:postgresql://localhost:5432/User-service
+spring.datasource.username=postgres
+spring.datasource.password=62760510akmt
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
