tour service without kafka message

--- a/Tour-service/src/main/resources/application.properties
+++ b/Tour-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Tour-service
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.username=postgres
 spring.datasource.password=62760510akmt
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
