--- a/Payment-service/build.gradle
+++ b/Payment-service/build.gradle
@@ -20,7 +20,10 @@ repositories {
 dependencies {
     implementation 'com.stripe:stripe-java:28.3.1'
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'org.postgresql:postgresql'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
