--- a/Tour-service/src/main/resources/application.properties
+++ b/Tour-service/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=postgres
 spring.datasource.password=62760510akmt
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
