--- a/Booking-service/src/main/resources/application.properties
+++ b/Booking-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Booking-service
+server.port=8085
+spring.datasource.url=jdbc:postgresql://localhost:5432/Booking-service
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.username=postgres
+spring.datasource.password=62760510akmt
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
