--- a/Tour-service/src/main/resources/application.properties
+++ b/Tour-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
