--- a/Tour-service/build.gradle
+++ b/Tour-service/build.gradle
@@ -19,9 +19,11 @@ java {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
+    implementation 'com.example:saga-events:1.0.0'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
