--- a/Tour-service/build.gradle
+++ b/Tour-service/build.gradle
@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'commons-logging:commons-logging:1.3.4'
     implementation 'com.example:saga-events:1.0.0'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
